--- a/env.example
+++ b/env.example
@@ -1,5 +1,5 @@
-NODE_ENV=development
+NODE_ENV=production
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/ecommerce
-JWT_SECRET=your_jwt_secret_key_here
+MONGODB_URI=mongodb+srv://adwisebangladesh_db_user:ut6MSoplW7izBU88@cluster0.ser5cva.mongodb.net/ecommerce?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=my_super_secret_jwt_key_that_is_at_least_32_characters_long_for_security
 JWT_EXPIRE=7d
