--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ PORT=5000
 MONGODB_URI=mongodb+srv://adwisebangladesh_db_user:ut6MSoplW7izBU88@cluster0.ser5cva.mongodb.net/ecommerce?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=my_super_secret_jwt_key_that_is_at_least_32_characters_long_for_security
 JWT_EXPIRE=7d
+NEXT_PUBLIC_API_URL=https://ecom-backend-production-bdfa.up.railway.app/api/v1
