--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "express": "^4.18.2",
     "express-rate-limit": "^8.1.0",
     "express-validator": "^7.0.1",
+    "ffprobe-static": "^3.1.0",
     "helmet": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "sharp": "^0.34.4",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
